# gobject-introspection

./: Makefile-girepository.am  Makefile-tools.am
girepository/: girparser.c  girparser.h  girwriter.c  gitypelib-internal.h  gitypelib.c
tests/: Makefile.am  gimarshallingtests.c
tests/repository/: Makefile.am  gitestenum.c  gitestwrite.c  testenum.gir
tools/: compiler.c
